--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>SalesmanBot</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="chatbox">
-    <div id="messages"></div>
-    <input id="userInput" placeholder="E.g. gaming PC under ₹70,000 with SSD" />
-    <button id="sendBtn">Send</button>
+  <div id="container">
+    <div id="header">
+      <h2>🤖 SalesmanBot</h2>
+      <p>AI PC Assistant</p>
+    </div>
+    
+    <div id="apiKeySection" style="display: block;">
+      <div class="api-key-setup">
+        <label for="apiKeyInput">Gemini API Key:</label>
+        <input id="apiKeyInput" type="password" placeholder="Enter your API key">
+        <button id="apiKeyBtn">Setup AI</button>
+        <p class="help-text">
+          Get your API key from <a href="https://aistudio.google.com/app/apikey" target="_blank">Google AI Studio</a>
+        </p>
+      </div>
+    </div>
+    
+    <div id="chatbox">
+      <div id="messages">
+        <div class="bot">Loading SalesmanBot...</div>
+      </div>
+      <div id="inputSection">
+        <input id="userInput" type="text" placeholder="E.g. gaming PC under ₹70,000">
+        <button id="sendBtn">Send</button>
+      </div>
+    </div>
   </div>
+  
   <script src="popup.js"></script>
 </body>
 </html>
